--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -8,7 +8,24 @@
     display: flex;
     flex-direction: column;
 }
-.card>h2{
-    margin-bottom: 1em;
+
+.form-heading {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.form-heading:hover{
+    cursor: pointer;
+}
+form label:first-of-type {
+    margin-top: 1em;
+}
+.form-heading > img {
+    width: 20px;
+    height: 20px;
+    transition: transform 0.5s ease;
 }
 
+.active {
+    transform: rotate(180deg);
+}
