--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,13 @@
 *, *::before, *::after {
 box-sizing: border-box;
 }
-
+#root{
+    flex:1;
+    display: flex;
+    justify-content: center;
+    gap:2em;
+    padding-top: 1em;
+}
 img, picture, svg, video {
 display: block;
 max-width: 100%;
@@ -19,11 +25,11 @@ padding: 0;
 }
 
 body {
-min-height: 100vh;
 font-family: 'Noto Sans', sans-serif;
-padding: 1em;
-/* background-color: #eef0f4; */
 background-color: #1f1f1f;
+}
+.left{
+ max-width: 50%;
 }
 .shadow{
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.411);
