--- a/src/styles/console.css
+++ b/src/styles/console.css
@@ -1,14 +1,15 @@
 .console{
     border: 2px solid #3b4b33;
     padding: 1em;
-    width:365px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 5px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 10px;
+    row-gap: 5px;
     background-color: #1b1e187d;
     border-radius: 10px;
     background-blend-mode: darken;
+    margin: 1em auto;
 }
 .console:hover, .console:focus{
     background-image: url('../assets/console-bg.avif');
@@ -16,16 +17,21 @@
 }
 .console>button:first-child{
     width: 100%;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
 .console>button:nth-child(2){
     background-color: #2f2525;
+    width: 100%;
 }
-.console>button:nth-child(2):hover,.console>button:nth-child(2):focus{
+.console>button:nth-child(2):hover{
     background-color: #684c4c;
 }
-.console>button:nth-child(3):hover,.console>button:nth-child(3):focus{
+.console>button:nth-child(3):hover{
     background-color: #205107;
 }
-.console>button:first-child:hover,.console>button:first-child:focus{
+.console>button:first-child:hover{
    background-color: #3e4a36;
 }
