--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
 /* css reset */
 *, *::before, *::after {
 box-sizing: border-box;
@@ -46,4 +47,55 @@ button{
 }
 button:hover{
     cursor: pointer;
+}
+
+.s_screen_error{
+display:none;
+font-family: 'Roboto Slab', serif; 
+color: #e3e3dc;
+}
+@media(max-width:900px){
+.left, .right > * {
+display : none;
+}
+.s_screen_error{
+display : block;
+font-size: 4rem;
+height: 100vh;
+width: 100vw;
+display: flex;
+align-items: center;
+position: relative;
+overflow: hidden;
+}
+.s_screen_error > #s_screen_error_text{
+width: 80%;
+margin: 0 auto;
+line-height: 1.5em;
+}
+#s_screen_error_text{
+animation-name: s_screen_error_animation;
+animation-duration: 1.5s;
+}
+@keyframes s_screen_error_animation{
+0% {
+position: relative;
+top: 150px;
+opacity: 0;
+}
+25% {
+opacity: 0.25;
+}
+50% {
+opacity: 0.5;
+}
+75% {
+opacity: 0.75;
+}
+100% {
+position: relative;
+top: 0px;
+opacity: 1;
+}
+}
 }
